--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Page Title</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Osama bin Laden and the Impact on America</title>
+    
 </head>
-<body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<body>  
+
+<style>
+    body {
+  background-color: darkgray;
+}
+
+h1 {
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+  </style>
+
+    <header>
+        <h1>Osama bin Laden</h1>
+    </header>
+
+        <h2>About Osama bin Laden</h2>
+        
+        <p>Osama bin Laden, the mastermind behind the 9/11 attacks, had a profound and tragic impact on the United States.</p>
+        <p>The attacks resulted in the loss of nearly 3,000 lives, causing immense grief and trauma for the nation.</p>
+        <p>The aftermath led to significant changes in U.S. foreign policy, security measures, and a reevaluation of national priorities.</p>
+        <p>Osama bin Laden's actions sparked the "War on Terror," influencing global politics and shaping the course of history.</p>
 
 </body>
 </html>
