--- a/index.html
+++ b/index.html
@@ -1,39 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Osama bin Laden and the Impact on America</title>
-    
+    <title>Eugene Stoner: An American Icon</title>
+    <style>
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f7f7;
+            color: #333;
+        }
+        header {
+            background-color: #444;
+            color: #fff;
+            text-align: center;
+            padding: 1em 0;
+        }
+        h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+        /* Add more styles as needed */
+        /* Customize your own styling */
+    </style>
 </head>
-
-<body>  
-
-<style>
-    body {
-  background-color: darkgray;
-}
-
-h1 {
-  text-align: center;
-}
-
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-  </style>
-
+<body>
     <header>
         <h1>Osama bin Laden</h1>
     </header>
 
-        <h2>About Osama bin Laden</h2>
-        
-        <p>Osama bin Laden, the mastermind behind the 9/11 attacks, had a profound and tragic impact on the United States.</p>
-        <p>The attacks resulted in the loss of nearly 3,000 lives, causing immense grief and trauma for the nation.</p>
-        <p>The aftermath led to significant changes in U.S. foreign policy, security measures, and a reevaluation of national priorities.</p>
-        <p>Osama bin Laden's actions sparked the "War on Terror," influencing global politics and shaping the course of history.</p>
+    <main>
+        <section>
+            <h2>Introduction</h2>
+            <p>Osama bin Laden was a Saudi Arabian-born extremist and the founder of the militant Islamist organization al-Qaeda. He was born on March 10, 1957, in Riyadh, Saudi Arabia, into a wealthy and prominent family with strong connections to the Saudi royal family. Bin Laden gained international notoriety for his role in orchestrating the September 11, 2001, terrorist attacks on the United States.</p>
 
+            <h2>Early Life and Background</h2>
+            <p>Osama was born in [year] and grew up in [place]...</p>
+
+
+            <h2>Contributions and Achievements</h2>
+            <p>Stoner's most notable contribution was the development of the AR-15 rifle...</p>
+            <!-- Add more information about Stoner's contributions -->
+        </section>
+
+        <section>
+            <h2>Legacy and Impact</h2>
+            <p>Stoner's inventions revolutionized the firearms industry...</p>
+            <!-- Add more information about Stoner's legacy and impact -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 YourWebsiteName. All rights reserved.</p>
+        <!-- Add additional footer information -->
+    </footer>
 </body>
 </html>
