--- a/index.html
+++ b/index.html
@@ -32,29 +32,21 @@
     </header>
 
     <main>
-        <section>
             <h2>Introduction</h2>
-            <p>Osama bin Laden was a Saudi Arabian-born extremist and the founder of the militant Islamist organization al-Qaeda. He was born on March 10, 1957, in Riyadh, Saudi Arabia, into a wealthy and prominent family with strong connections to the Saudi royal family. Bin Laden gained international notoriety for his role in orchestrating the September 11, 2001, terrorist attacks on the United States.</p>
+            <p>Osama bin Laden was a Saudi Arabian-born extremist and the founder of the militant Islamist organization al-Qaeda.</p>
+            <img src=https://m.media-amazon.com/images/M/MV5BMjEzNjEyMjkwOV5BMl5BanBnXkFtZTcwNDMyNDIzOA@@._V1_FMjpg_UX1000_.jpg  width="300" height="350">
+
 
             <h2>Early Life and Background</h2>
-            <p>Osama was born in [year] and grew up in [place]...</p>
+            <p>Osama bin Laden was born on March 10, 1957, in Riyadh, Saudi Arabia, to a wealthy and influential family. His father, Mohammed bin Laden, was a successful construction magnate. Osama studied management and economics at King Abdulaziz University in Jeddah. In the 1980s, he became involved in supporting the Afghan resistance against the Soviet Union. This period marked a turning point in his life, as his experiences in Afghanistan fueled the development of his radical Islamist views, leading to the founding of al-Qaeda in 1988.</p>
 
 
-            <h2>Contributions and Achievements</h2>
-            <p>Stoner's most notable contribution was the development of the AR-15 rifle...</p>
-            <!-- Add more information about Stoner's contributions -->
-        </section>
+            <h2>Main Impact</h2>
+            <p>Osama bin Laden's impact on the United States was defined by his orchestration of the September 11, 2001, terrorist attacks, resulting in nearly 3,000 deaths.</p>
 
-        <section>
-            <h2>Legacy and Impact</h2>
-            <p>Stoner's inventions revolutionized the firearms industry...</p>
-            <!-- Add more information about Stoner's legacy and impact -->
-        </section>
+            <h2>Legacy</h2>
+            <p>Osama bin Laden's legacy profoundly impacted the United States, triggering an increase in national security policies after the 9/11 attacks. The subsequent War on Terror led to military interventions in Afghanistan and Iraq, shaping U.S. foreign policy and global alliances. Domestically, measures like the creation of the Department of Homeland Security and the USA PATRIOT Act sought to enhance security but raised concerns about civil liberties. The enduring legacy of Bin Laden includes ongoing debates about the balance between national security imperatives and individual freedoms.</p>
     </main>
 
-    <footer>
-        <p>&copy; 2023 YourWebsiteName. All rights reserved.</p>
-        <!-- Add additional footer information -->
-    </footer>
 </body>
 </html>
