--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Eugene Stoner: An American Icon</title>
+    <title>Osama bin Laden</title>
     <style>
         /* Add your CSS styles here */
         body {
