--- a/index.html
+++ b/index.html
@@ -2,29 +2,33 @@
 <html lang="en">
 <head>
     <title>Osama bin Laden</title>
-    <style>
-        /* Add your CSS styles here */
+<style>
+    
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f7f7f7;
-            color: #333;
-        }
+        background-color: #8E8E8E;
+    }
+
+    }
         header {
-            background-color: #444;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-        }
+          background-color: #444;
+          color: #fff;
+          text-align: center;
         h1 {
-            margin: 0;
-            font-size: 2em;
-        }
-        /* Add more styles as needed */
-        /* Customize your own styling */
-    </style>
+          color: white;
+          text-align: center;
+    }
+
+    }
+        header {
+          background-color: #444;
+          color: #fff;
+          text-align: center;
+          padding: 1em 0;
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+  </style>
 </head>
 <body>
     <header>
