--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <style>
     
         body {
-        background-color: #8E8E8E;
+            text-align: center;
+            font-size: 25px;
+            background-color: #8E8E8E;
     }
 
     }
@@ -46,7 +48,8 @@ p {
 
 
             <h2>Main Impact</h2>
-            <p>Osama bin Laden's impact on the United States was defined by his orchestration of the September 11, 2001, terrorist attacks, resulting in nearly 3,000 deaths.</p>
+            <p>Osama bin Laden's impact on the United States was defined by his orchestration of the September 11, 2001, terrorist attacks. T errorists hijacked four planes, crashing two into the World Trade Center towers in New York City and one into the Pentagon in Arlington, Virginia. The attacks caused the collapse of the Twin Towers, leading to almost 3,000 deaths and widespread devastation. The fourth plane, United Airlines Flight 93, crashed in Pennsylvania after passengers bravely resisted the hijackers. The coordinated attacks prompted the grounding of all domestic flights, evacuation of numerous buildings, and a profound impact on global security policies. The events of 9/11 resulted in significant loss of life, reshaping U.S. national security, foreign policy, and global perceptions of terrorism.</p>
+            <img src=https://ca-times.brightspotcdn.com/dims4/default/f3a750b/2147483647/strip/true/crop/384x512+0+0/resize/1200x1600!/quality/75/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2Fae%2F69%2Fdab6431f0633db608801ef7094cb%2Fsdut-this-photo-taken-sept.-11-20-20160829 width="300" height="350">
 
             <h2>Legacy</h2>
             <p>Osama bin Laden's legacy profoundly impacted the United States, triggering an increase in national security policies after the 9/11 attacks. The subsequent War on Terror led to military interventions in Afghanistan and Iraq, shaping U.S. foreign policy and global alliances. Domestically, measures like the creation of the Department of Homeland Security and the USA PATRIOT Act sought to enhance security but raised concerns about civil liberties. The enduring legacy of Bin Laden includes ongoing debates about the balance between national security imperatives and individual freedoms.</p>
